cmake_minimum_required(VERSION 2.8)
PROJECT(jsoner)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

SET(JSONCPP_FIND_REQUIRED TRUE)
FIND_PACKAGE(JsonCpp)

SET(Boost_FIND_REQUIRED TRUE) 
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost 1.48 REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${JSONCPP_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_SUBDIRECTORY(sparser)

ADD_EXECUTABLE(jsoner main.cpp)
TARGET_LINK_LIBRARIES(jsoner ${JSONCPP_LIBRARY})
